--- a/Notebook/smiles.ipynb
+++ b/Notebook/smiles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
    ],
    "source": [
     "using Pkg\n",
-    "Pkg.activate(\".\")\n",
+    "Pkg.activate(\"..\")\n",
     "\n",
     "using MolecularGraph, MolecularGraph.Graphs"
    ]
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -50,19 +50,21 @@
      "output_type": "stream",
      "text": [
       "Finished branch at 3 → jumping back to 2\n",
+      "Finished branch at 5 → jumping back to 4\n",
       "Finished branch at 4 → jumping back to 2\n",
-      "Finished branch at 5 → jumping back to 2\n",
+      "Finished branch at 6 → jumping back to 2\n",
       "Finished branch at 2 → jumping back to 1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "5-element Vector{Int64}:\n",
+       "6-element Vector{Int64}:\n",
        " 1\n",
        " 1\n",
        " 2\n",
        " 2\n",
+       " 4\n",
        " 2"
       ]
      },
@@ -94,9 +96,178 @@
     "end\n",
     "\n",
     "# Example usage:\n",
-    "mg = MolecularGraph.smilestomol(\"CC(C)(C)C\") # Skapar en MolGraph från SMILES-strängen \"CC(C)(C)C\".\n",
+    "mg = MolecularGraph.smilestomol(\"CC(C)(CC)C\") # Skapar en MolGraph från SMILES-strängen \"CC(C)(C)C\".\n",
     "parents = dfs_with_backtrack(mg, 1) # funktionen returnerar en lista och har tagit in molekylen i mg och startindex 1. \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# takes idealized smiles with only capital letters and parentheses\n",
+    "# atom types dont technically matter.\n",
+    "# we assume each atom type is just one character\n",
+    " # function get_bond_pairs(clean_smiles::String,positions, cutoff=1.2)\n",
+    "    # bond_pairs = Tuple{Int,Int}[]\n",
+    "    # for i in 1:length(clean_smiles)-1:\n",
+    "       #  for j in 1+1:length(clean_smiles):\n",
+    "         #    distance = norm(positions[i] - positions[j])\n",
+    "          #   if distance ≤ cutoff\n",
+    "          #   push!(bond_pairs, (i, j))\n",
+    "\n",
+    "  #   end\n",
+    "# end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "using Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"CC(C)(C)C\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "unwanted_characters = collect(\"0123456789.=#\\$:/\\\\\")\n",
+    "\n",
+    "smiles = \"C3C1(C2.:#\\$)(C)1C\"\n",
+    "clean_smiles = uppercase(replace(smiles, [s => \"\" for s in unwanted_characters]...))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "get_bond_pairs (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Vi utgår från att `clean_smiles` innehåller t.ex. \"CC(C)(CC)C\"\n",
+    "function get_bond_pairs(clean_smiles::String)\n",
+    "    bond_pairs = Tuple{Int,Int}[]   # resultatlista\n",
+    "    stack      = Int[]              # för att spara uppgångspunkter vid '('\n",
+    "    last_atom  = 0                  # index på senaste atom i “huvudkedjan”\n",
+    "    atom_idx   = 0                  # räknare för atomer\n",
+    "\n",
+    "    for c in collect(clean_smiles)\n",
+    "        if isuppercase(c)           # en atom (antar enkelteckens-atomer)\n",
+    "            atom_idx += 1\n",
+    "            if last_atom != 0\n",
+    "                push!(bond_pairs, (last_atom, atom_idx))\n",
+    "            end\n",
+    "            last_atom = atom_idx\n",
+    "        elseif c == '('\n",
+    "            # sparar var vi “grenade” från\n",
+    "            push!(stack, last_atom)\n",
+    "        elseif c == ')'\n",
+    "            # när grenen är slut, gå tillbaka till det sparade indexet\n",
+    "            last_atom = pop!(stack)\n",
+    "        else\n",
+    "            # (om du hade andra tecken, ignoreras de här)\n",
+    "        end\n",
+    "    end\n",
+    "\n",
+    "    return bond_pairs\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32m\u001b[1mTest Passed\u001b[22m\u001b[39m"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@test get_bond_pairs(\"CC(C)(C)C\") ==\n",
+    "    [(1, 2), (2, 3), (2, 4), (2, 5)]\n",
+    "\n",
+    "@test get_bond_pairs(\"CC(C)(C)CC\") ==\n",
+    "    [(1, 2), (2, 3), (2, 4), (2, 5), (5, 6)]\n",
+    "\n",
+    "@test get_bond_pairs(\"CC(C)(CC(C)C)C\") ==\n",
+    "    [(1, 2),(2,3),(2,4),(4,5),(5,6),(5,7),(2,8)]\n",
+    "\n",
+    "# test passed yaaaaaaay "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[91m\u001b[1mError During Test\u001b[22m\u001b[39m at \u001b[39m\u001b[1m/Users/alicestenbeck/.julia/dev/MOGMOG.jl/Notebook/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X10sZmlsZQ==.jl:3\u001b[22m\n",
+      "  Test threw exception\n",
+      "  Expression: get_bond_pairs(\"CC(C)(C)C\") == [(1, 2), (2, 3), (2, 4), (2, 5)]\n",
+      "  UndefVarError: `get_bond_pairs` not defined in `Main`\n",
+      "  Suggestion: check for spelling errors or missing imports.\n",
+      "  Stacktrace:\n",
+      "   [1] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n",
+      "  \u001b[90m   @\u001b[39m \u001b[90m~/.julia/juliaup/julia-1.11.5+0.aarch64.apple.darwin14/share/julia/stdlib/v1.11/Test/src/\u001b[39m\u001b[90m\u001b[4mTest.jl:676\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
+      "   [2] top-level scope\n",
+      "  \u001b[90m   @\u001b[39m \u001b[90m~/.julia/dev/MOGMOG.jl/Notebook/\u001b[39m\u001b[90m\u001b[4mjl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X10sZmlsZQ==.jl:3\u001b[24m\u001b[39m\n"
+     ]
+    },
+    {
+     "ename": "Test.FallbackTestSetException",
+     "evalue": "Test.FallbackTestSetException(\"There was an error during testing\")",
+     "output_type": "error",
+     "traceback": [
+      "Test.FallbackTestSetException(\"There was an error during testing\")\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] record(ts::Test.FallbackTestSet, t::Union{Test.Error, Test.Fail})\n",
+      "   @ Test ~/.julia/juliaup/julia-1.11.5+0.aarch64.apple.darwin14/share/julia/stdlib/v1.11/Test/src/Test.jl:1026\n",
+      " [2] do_test(result::Test.ExecutionResult, orig_expr::Any)\n",
+      "   @ Test ~/.julia/juliaup/julia-1.11.5+0.aarch64.apple.darwin14/share/julia/stdlib/v1.11/Test/src/Test.jl:712\n",
+      " [3] macro expansion\n",
+      "   @ ~/.julia/juliaup/julia-1.11.5+0.aarch64.apple.darwin14/share/julia/stdlib/v1.11/Test/src/Test.jl:679 [inlined]\n",
+      " [4] top-level scope\n",
+      "   @ ~/.julia/dev/MOGMOG.jl/Notebook/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X10sZmlsZQ==.jl:3"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
