--- a/Notebook/smiles.ipynb
+++ b/Notebook/smiles.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -148,6 +148,7 @@
     }
    ],
    "source": [
+    "# unwanted_characters = collect(\"0123456789.=#\\$:/\\\\\")\n",
     "unwanted_characters = collect(\"0123456789.=#\\$:/\\\\\")\n",
     "\n",
     "smiles = \"C3C1(C2.:#\\$)(C)1C\"\n",
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -170,8 +171,64 @@
     }
    ],
    "source": [
-    "# Vi utgår från att `clean_smiles` innehåller t.ex. \"CC(C)(CC)C\"\n",
+    "# försök att få ringar att fungera\n",
+    "\n",
     "function get_bond_pairs(clean_smiles::String)\n",
+    "    bond_pairs   = Tuple{Int,Int}[]   # resultatlista\n",
+    "    stack        = Int[]              # för att spara var grenar startar\n",
+    "    ring_indices = Dict{Char,Int}()   # för att hantera ring-siffror\n",
+    "    last_atom    = 0                  # index på senaste atom\n",
+    "    atom_idx     = 0                  # atom-räknare\n",
+    "\n",
+    "    for c in collect(clean_smiles)\n",
+    "        if isuppercase(c)\n",
+    "            atom_idx += 1\n",
+    "            if last_atom != 0\n",
+    "                push!(bond_pairs, (last_atom, atom_idx))\n",
+    "            end\n",
+    "            last_atom = atom_idx\n",
+    "\n",
+    "        elseif c == '('\n",
+    "            push!(stack, last_atom)\n",
+    "\n",
+    "        elseif c == ')'\n",
+    "            last_atom = pop!(stack)\n",
+    "\n",
+    "        elseif isdigit(c)\n",
+    "            # första gång vi ser siffran → spara “ring-start”\n",
+    "            if !haskey(ring_indices, c)\n",
+    "                ring_indices[c] = last_atom\n",
+    "            else\n",
+    "                # andra gången → skapa ringbindningen\n",
+    "                push!(bond_pairs, (last_atom, ring_indices[c]))\n",
+    "                delete!(ring_indices, c)\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "\n",
+    "    return bond_pairs\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "get_bond_pairs (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# första variant \n",
+    "# Vi utgår från att `clean_smiles` innehåller t.ex. \"CC(C)(CC)C\"\n",
+    " function get_bond_pairs(clean_smiles::String)\n",
     "    bond_pairs = Tuple{Int,Int}[]   # resultatlista\n",
     "    stack      = Int[]              # för att spara uppgångspunkter vid '('\n",
     "    last_atom  = 0                  # index på senaste atom i “huvudkedjan”\n",
@@ -201,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -215,16 +272,123 @@
     }
    ],
    "source": [
-    "@test get_bond_pairs(\"CC(C)(C)C\") ==\n",
-    "    [(1, 2), (2, 3), (2, 4), (2, 5)]\n",
+    "@test get_bond_pairs(\"CC(C)(C)C\")             == [(1,2),(2,3),(2,4),(2,5)]\n",
+    "@test get_bond_pairs(\"CC(C)(C)CC\")           == [(1,2),(2,3),(2,4),(2,5),(5,6)]\n",
+    "@test get_bond_pairs(\"CC(C)(CC(C)C)C\")       == [(1,2),(2,3),(2,4),(4,5),(5,6),(5,7),(2,8)]\n",
     "\n",
-    "@test get_bond_pairs(\"CC(C)(C)CC\") ==\n",
-    "    [(1, 2), (2, 3), (2, 4), (2, 5), (5, 6)]\n",
+    "# test passed "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Test "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"CC(C)(C)C\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "unwanted_characters = collect(\"0123456789.=#\\$:/\\\\\")\n",
     "\n",
-    "@test get_bond_pairs(\"CC(C)(CC(C)C)C\") ==\n",
-    "    [(1, 2),(2,3),(2,4),(4,5),(5,6),(5,7),(2,8)]\n",
+    "smiles = \"C3C1(C2.:#\\$)(C)1C\"\n",
+    "clean_smiles = uppercase(replace(smiles, [s => \"\" for s in unwanted_characters]...))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "compute_climbs (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function compute_climbs(smiles::String)\n",
+    "    # --- Steg 1: Tilldela varje atom ett grupp-ID och samla alla atom-index per grupp ---\n",
+    "    stack = Int[]                           # håller öppna grupp-ID:n\n",
+    "    atom_groups = Int[]                     # grupp-ID per atom (0 = ingen)\n",
+    "    group_members = Dict{Int,Vector{Int}}() # atom-index per grupp\n",
+    "    next_group_id = 1\n",
     "\n",
-    "# test passed yaaaaaaay "
+    "    for c in smiles\n",
+    "        if c == '('\n",
+    "            # starta ny grupp\n",
+    "            group_members[next_group_id] = Int[]\n",
+    "            push!(stack, next_group_id)\n",
+    "            next_group_id += 1\n",
+    "\n",
+    "        elseif c == ')'\n",
+    "            # stäng senaste öppna grupp\n",
+    "            pop!(stack)\n",
+    "\n",
+    "        elseif isletter(c)\n",
+    "            # bokstav = atom\n",
+    "            gid = isempty(stack) ? 0 : stack[end]\n",
+    "            push!(atom_groups, gid)\n",
+    "            if gid != 0\n",
+    "                push!(group_members[gid], length(atom_groups))\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "\n",
+    "    # --- Steg 2: Sätt climb endast på sista atom i varje grupp ---\n",
+    "    n = length(atom_groups)\n",
+    "    climbs = zeros(Int, n)\n",
+    "    for (gid, members) in group_members\n",
+    "        S = length(members)\n",
+    "        last_idx = members[end]\n",
+    "        climbs[last_idx] = S\n",
+    "    end\n",
+    "\n",
+    "    return climbs\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32m\u001b[1mTest Passed\u001b[22m\u001b[39m"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@test compute_climbs(\"CC(C)(CC)C\")             == [0,0,1,0,2,0]\n",
+    "@test compute_climbs(\"CC(C)(C)C\")             == [0,0,1,1,0]\n",
+    "@test compute_climbs(\"CC(C)(CC(C)C)C\")       == [0,0,1,0,0,1,3,0]\n",
+    "@test compute_climbs(\"CC(C(C)C)(CC(C)CC)C(C)C\")   == [0, 0, 0, 1, 2, 0, 0, 1, 0, 4, 0, 1, 0]\n",
+    "\n",
+    "# alla passed "
    ]
   },
   {
