--- a/Notebook/smiles.ipynb
+++ b/Notebook/smiles.ipynb
@@ -326,6 +326,12 @@
     }
    ],
    "source": [
+    "# CLIMBS FUNCTION ####\n",
+    "# If the atom is by itself and has no () = 0 \n",
+    "# If there is one atom inside the ()= 1\n",
+    "# If there are more than one inside the (), then the last atom will recieve a climb of the amount of atoms in that chain but the other ones will have zero (except if there are more sidechains in that sidechain).\n",
+    "# The last atom in the molecule always get a climb 0 \n",
+    "\n",
     "function compute_climbs(smiles::String)\n",
     "    # --- Steg 1: Tilldela varje atom ett grupp-ID och samla alla atom-index per grupp ---\n",
     "    stack = Int[]                           # håller öppna grupp-ID:n\n",
