--- a/Notebook/smiles.ipynb
+++ b/Notebook/smiles.ipynb
@@ -543,6 +543,45 @@
     "    return sum(logpdf.(MvNormal.(μ, σ), eachslice(disp, dims=3))) .+ logw\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function loss(model, atom_seq, coord_seq, climb_seq, atom_mask, coord_mask)\n",
+    "    # === Format model inputs ===\n",
+    "    atom_ids = Flux.onehotbatch(atom_seq, 1:model.vocab_size)\n",
+    "    pos      = reshape(hcat(coord_seq...), 3, 1, length(coord_seq))  # [3, B=1, T]\n",
+    "\n",
+    "    # === Forward pass ===\n",
+    "    μ, σ, logw, logits, climb_logits = model(pos, atom_ids)\n",
+    "\n",
+    "    # === Coordinate loss (Mixture of Gaussians) ===\n",
+    "    disp = pos[:, :, 2:end] .- pos[:, :, 1:end-1]\n",
+    "    coord_mask_arr = reshape(coord_mask, 1, 1, length(coord_mask))\n",
+    "    disp .= disp .* coord_mask_arr[:, :, 2:end]\n",
+    "\n",
+    "    logp_xyz = logpdf_MOG(disp, μ, σ, logw)\n",
+    "    loss_xyz = -sum(logp_xyz .* coord_mask_arr[:, :, 2:end]) / sum(coord_mask)\n",
+    "\n",
+    "    # === Atom type loss ===\n",
+    "    target_atoms   = atom_seq[2:end]\n",
+    "    atom_onehot    = Flux.onehotbatch(target_atoms, 1:size(logits,1))\n",
+    "    atom_mask_arr  = reshape(atom_mask, 1, length(atom_mask))\n",
+    "    masked_mean(p) = sum(p .* atom_mask_arr[:, 2:end]) / sum(atom_mask)\n",
+    "    loss_type      = Flux.logitcrossentropy(dropdims(logits, dims=2), atom_onehot; agg=masked_mean)\n",
+    "\n",
+    "    # === Climb prediction loss ===\n",
+    "    target_climbs = climb_seq[2:end]\n",
+    "    climb_onehot  = Flux.onehotbatch(target_climbs, 0:size(climb_logits, 1)-1)\n",
+    "    loss_climb    = Flux.logitcrossentropy(dropdims(climb_logits, dims=2), climb_onehot; agg=masked_mean)\n",
+    "\n",
+    "    # === Total loss ===\n",
+    "    return loss_xyz + loss_type + loss_climb\n",
+    "end\n"
+   ]
   }
  ],
  "metadata": {
